Fix the sort-directories-first setting handling

Sadly, we can't bind two settings to the same object property,
so use a manual handler for the :notify::active signal instead.

https://bugzilla.gnome.org/show_bug.cgi?id=730867